rawExtracts/Flows/main/default/objects/Account/fields/Internal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_ID__c</fullName>
    <description>work around for process builder funniness with person accounts</description>
    <formula>User__pr.Id</formula>
    <label>Internal User ID</label>
    <type>Text</type>
</CustomField>