rawExtracts/Flows/main/default/objects/Account/fields/Send_Outbound_SMS_pa__c.field-meta.xml
<CustomField>
    <fullName>Send_Outbound_SMS_pa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Outbound SMS</label>
    <type>Checkbox</type>
</CustomField>