rawExtracts/Flows/main/default/objects/Account/fields/SMS_Message_pa__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message_pa__c</fullName>
    <label>SMS Message</label>
    <type>TextArea</type>
</CustomField>